--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "boldorjs",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Work with the bolivar and the dollar as currencies in your projects.",
-  "main": "./dist/index",
+  "main": "./dist/index.js",
   "files": [
     "dist/*",
     "LICENSE",
